# redmine-burndown

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  data_model.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
rd_burndown/: __init__.py  cli.py  models.py  snapshot.py  sync.py
rd_burndown/api/: __init__.py  client.py
rd_burndown/commands/: __init__.py  check.py  snapshot.py  sync.py
rd_burndown/config/: __init__.py  settings.py
scripts/: check_code_similarity.py
tests/: conftest.py  test_models.py  test_snapshot.py  test_sync.py
tests/api/: __init__.py  test_client.py
tests/commands/: __init__.py  test_check.py  test_snapshot.py  test_sync.py
tests/config/: __init__.py  test_settings.py
